update gitconfig and make sure to override gitconfig and hyperterm files

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
 	name = Mike McBride
-	email = mike.mcbride@wwt.com 
+	email = mmcbride1007@gmail.com
 [push]
 	default = simple
 [filter "lfs"]
