--- a/.gitconfig
+++ b/.gitconfig
@@ -3,6 +3,7 @@
 [core]
 	editor = /usr/local/bin/vim
   excludesfile = ~/.gitignore.global
+	pager = diff-so-fancy | less --tabs=2 -RFX
 [alias]
 	g = git
 	c = commit -am
@@ -36,3 +37,8 @@
 # use separate file for user info
 [include]
   path = ~/.gitconfig.local
+[color "diff-highlight"]
+	oldNormal = red bold
+	oldHighlight = red bold 52
+	newNormal = green bold
+	newHighlight = green bold 22
