--- a/.gitconfig
+++ b/.gitconfig
@@ -38,7 +38,7 @@
 [include]
   path = ~/.gitconfig.local
 [color "diff-highlight"]
-	oldNormal = red bold
-	oldHighlight = red bold 52
-	newNormal = green bold
-	newHighlight = green bold 22
+	oldNormal = red
+	oldHighlight = red bold
+	newNormal = green
+	newHighlight = green bold
