add a bunch of stuff for using bash

--- a/.gitconfig
+++ b/.gitconfig
@@ -8,6 +8,7 @@
 	g = git
 	c = commit -am
 	co = checkout
+	unstage = reset HEAD --
 	branch-name = rev-parse --abbrev-ref HEAD
 	publish = push -u origin $(git branch-name)
 	mm = "!git merge master"
