--- a/.gitconfig
+++ b/.gitconfig
@@ -8,23 +8,24 @@
 	g = git
 	c = commit -am
 	co = checkout
+	bc = checkout -b
+	bx = branch -D
+	ba = branch --all
+	cmsg = commit -m
 	unstage = reset HEAD --
 	branch-name = rev-parse --abbrev-ref HEAD
 	publish = push -u origin $(git branch-name)
-	mm = "!git merge master"
-	f = "!git fetch --all --prune"
-	l = "!git pull"
-	d = "!git diff"
-	a = "!git add"
-	cm = "!git checkout master"
+	pub = push -u origin $(git branch-name)
+	mm = merge master
+	f = fetch --all --prune
+	l = pull
+	d = diff
+	a = add
+	cm = checkout master
 	lm = "!git checkout master && git pull"
-	cam = "!git commit -am"
-	cmsg = "!git commit --message"
-	s = "!git status"
-	ba = "!git branch --all"
-	lg = "!git log --graph --decorate --pretty=oneline --abbrev-commit --all"
-	conflicts = "!git diff --name-only --diff-filter=U"
-	pub = "!git $(publish)"
+	s = status
+	lg = log --graph --decorate --pretty=oneline --abbrev-commit --all
+	conflicts = diff --name-only --diff-filter=U
 	# Delete any branches that have been merged into master
 	# See also: https://gist.github.com/robmiller/5133264
 	cleanup = !git co master && git branch --merged | grep -v '\\*' | xargs -n 1 git branch -d
