--- a/.gitconfig
+++ b/.gitconfig
@@ -33,8 +33,9 @@
 	date = iso
 [filter "lfs"]
 	required = true
-	clean = git-lfs clean %f
-	smudge = git-lfs smudge %f
+	process = git-lfs filter-process
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
 
 # use separate file for user info
 [include]
