--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/mmcbride1007/dotfiles#readme",
   "dependencies": {
+    "boxen": "^1.2.2",
+    "chalk": "^2.3.0",
     "execa": "^0.6.3",
     "internal-ip": "^1.2.0",
     "is-git-repository": "^1.1.1",
