--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "boxen": "^1.2.2",
     "chalk": "^2.3.0",
+    "clipboardy": "^1.2.2",
     "execa": "^0.6.3",
     "internal-ip": "^1.2.0",
     "is-git-repository": "^1.1.1",
