--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "boxen": "^1.2.2",
     "chalk": "^2.3.0",
     "clipboardy": "^1.2.2",
+    "emphasize": "^2.0.0",
     "empty-trash": "^2.1.1",
     "execa": "^0.6.3",
     "internal-ip": "^1.2.0",
