make empty trash more fun, and don't make me wait

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "is-git-repository": "^1.1.1",
     "open": "0.0.5",
     "ora": "^1.2.0",
+    "random-item": "^1.0.0",
     "simple-git": "^1.84.0"
   }
 }
