--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "is-git-repository": "^1.1.1",
     "open": "^6.0.0",
     "ora": "^1.2.0",
+    "pretty-bytes": "^5.5.0",
     "random-item": "^1.0.0",
     "simple-git": "^1.84.0"
   }
