--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gifify": "^2.4.3",
     "internal-ip": "^1.2.0",
     "is-git-repository": "^1.1.1",
+    "nodejs-process-timer": "^1.0.0",
     "open": "^6.0.0",
     "ora": "^1.2.0",
     "pretty-bytes": "^5.5.0",
