fix logic in wordle for no doubles matching correctly placed letters

--- a/warp/themes/electron_highlighter.yaml
+++ b/warp/themes/electron_highlighter.yaml
@@ -1,6 +1,6 @@
 
 # Accent color for UI elements
-accent: '#34febb'
+accent: '#82aaff'
 # Terminal background color
 background: '#202836'
 # Whether the theme is lighter or darker.
