add zed config, update theme toggle, update golang prompt icon

--- a/starship.toml
+++ b/starship.toml
@@ -51,7 +51,7 @@ deleted = "×"
 # remove bold styling from language prompts
 [golang]
 style = "cyan"
-symbol = " "
+symbol = "ﳑ "
 
 [nodejs]
 style = "green"
