--- a/zed/settings.json
+++ b/zed/settings.json
@@ -1,7 +1,7 @@
 {
-    "buffer_font_family": "MonoLisa",
+    "buffer_font_family": "MonoLisa Nerd Font",
     "buffer_font_size": 16,
     "theme": "sulphurpool-dark",
     "soft_wrap": "editor_width",
-    "vim_mode": false
+    "vim_mode": true
 }
