--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -193,7 +193,7 @@ cursor #d9bd93
 #: precedence. Also, the cursor colors are modified if the cell
 #: background and foreground colors have very low contrast.
 
-cursor_text_color background
+cursor_text_color #282828
 
 #: Choose the color of text under the cursor. If you want it rendered
 #: with the background color of the cell underneath instead, use the
@@ -706,7 +706,7 @@ cursor_blink_interval 0
 #: values set top, horizontal and bottom. Four values set top, right,
 #: bottom and left.
 
-# window_padding_width 0
+window_padding_width 10 16 20
 
 #: The window padding (in pts) (blank area between the text and the
 #: window border). A single value sets all four sides. Two values set
@@ -837,7 +837,7 @@ tab_bar_edge bottom
 #: the second number is the margin between the tab bar and the
 #: contents of the current tab.
 
-tab_bar_style separator
+tab_bar_style powerline
 
 #: The tab bar style, can be one of:
 
@@ -890,12 +890,12 @@ tab_bar_style separator
 #: can change the number of cells used by adding/removing entries to
 #: this list.
 
-# tab_separator " ┇"
+# tab_separator " | "
 
 #: The separator between tabs in the tab bar when using separator as
 #: the tab_bar_style.
 
-# tab_powerline_style angled
+tab_powerline_style slanted
 
 #: The powerline separator style between tabs in the tab bar when
 #: using powerline as the tab_bar_style, can be one of: angled,
@@ -1262,7 +1262,7 @@ editor vim
 #: </kittens/hints>. The special value of ``ask`` means that kitty
 #: will ask before opening the link when clicked.
 
-# shell_integration enabled
+shell_integration no-cursor
 
 #: Enable shell integration on supported shells. This enables features
 #: such as jumping to previous prompts, browsing the output of the
