--- a/zed/settings.json
+++ b/zed/settings.json
@@ -1,7 +1,8 @@
 {
     "buffer_font_family": "MonoLisa Nerd Font",
     "buffer_font_size": 16,
-    "theme": "andromeda",
+    "theme": "sandcastle",
+    "format_on_save": false,
     "soft_wrap": "editor_width",
     "vim_mode": true
 }
