--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 .DS_Store
 node_modules
 
-fish/.config/fish/fishd.*
-fish/.config/fish/conf.d
-fish/.config/fish/completions
-fish/.config/fish/functions/__z*
-fish/.config/fish/functions/rbenv.fish
+fish/fishd.*
+fish/conf.d
+fish/completions
+fish/functions/__z*
+fish/functions/rbenv.fish
 
-nvim/.config/nvim/*/packer_compiled.lua
+nvim/*/packer_compiled.lua
