update nvim plugins

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -57,3 +57,9 @@
 	rebase = false
 [init]
 	defaultBranch = main
+[credential "https://github.com"]
+	helper = 
+	helper = !/opt/homebrew/bin/gh auth git-credential
+[credential "https://gist.github.com"]
+	helper = 
+	helper = !/opt/homebrew/bin/gh auth git-credential
