remove catppuccin, add tmux-session-killer

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -6,7 +6,7 @@ set-option -ga terminal-overrides ",xterm-256color:Tc"
 set -s escape-time 0
 
 # the default green bg status bar sucks
-set -g status-style 'bg=#181825 fg=#92b3f4'
+set -g status-style 'bg=#15161e fg=#82aaff'
 
 bind r source-file ~/.tmux.conf
 
@@ -46,3 +46,4 @@ bind -r l select-pane -R
 
 # forget the find window.  That is for chumps
 bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
+bind-key -r k run-shell "~/.local/bin/tmux-sessionizer"
