update brew dependencies, aliases

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -115,7 +115,8 @@ disable_ligatures always
 
 # font_features
 
-#: E.g. font_features none
+# disable_ligatures didn't seem to work, hopefully this does.
+font_features none
 
 #: Choose exactly which OpenType features to enable or disable. This
 #: is useful as some fonts might have features worthwhile in a
@@ -704,7 +705,7 @@ cursor_blink_interval 0
 #: values set top, horizontal and bottom. Four values set top, right,
 #: bottom and left.
 
-window_padding_width 8 16 8
+window_padding_width 2 8
 
 #: The window padding (in pts) (blank area between the text and the
 #: window border). A single value sets all four sides. Two values set
