update tmux session length style

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -8,6 +8,10 @@ set -s escape-time 0
 # the default green bg status bar sucks
 set -g status-style 'bg=#15161e fg=#82aaff'
 
+# give more space to session name
+# it won't always take 40 characters, but it will allow up to that many
+set -g status-left-length 40
+
 bind r source-file ~/.tmux.conf
 
 # windows start at index 1 instead of 0
