disable ligatures in MonoLisa nerd font

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -115,8 +115,8 @@ disable_ligatures always
 
 # font_features
 
-# disable_ligatures didn't seem to work, hopefully this does.
-font_features none
+# disable_ligatures didn't seem to work, so we have to override it specifically for this font
+font_features MonoLisaNerdFontComplete-Regular -liga -calt
 
 #: Choose exactly which OpenType features to enable or disable. This
 #: is useful as some fonts might have features worthwhile in a
