add cron jobs, color tweaks

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -2070,53 +2070,110 @@ macos_thicken_font 0.75
 #: }}}
 
 # KITTY_THEME
-# Begin Tokyonight Theme
-# vim:ft=kitty
+# # Begin Tokyonight Theme
+# # vim:ft=kitty
 
-## name: Tokyo Night
-## license: MIT
-## author: Folke Lemaitre
-## upstream: https://github.com/folke/tokyonight.nvim/raw/main/extras/kitty/tokyonight_night.conf
+# ## name: Tokyo Night
+# ## license: MIT
+# ## author: Folke Lemaitre
+# ## upstream: https://github.com/folke/tokyonight.nvim/raw/main/extras/kitty/tokyonight_night.conf
 
 
-background #1a1b26
-foreground #c0caf5
-selection_background #33467c
-selection_foreground #c0caf5
-url_color #73daca
-cursor #c0caf5
-cursor_text_color #1a1b26
+# background #1a1b26
+# foreground #c0caf5
+# selection_background #33467c
+# selection_foreground #c0caf5
+# url_color #73daca
+# cursor #c0caf5
+# cursor_text_color #1a1b26
 
-# Tabs
-active_tab_background #7aa2f7
-active_tab_foreground #16161e
-inactive_tab_background #292e42
-inactive_tab_foreground #545c7e
-tab_bar_background #15161e
-macos_titlebar_color #15161e
+# # Tabs
+# active_tab_background #7aa2f7
+# active_tab_foreground #16161e
+# inactive_tab_background #292e42
+# inactive_tab_foreground #545c7e
+# tab_bar_background #15161e
+# macos_titlebar_color #15161e
 
-# normal
-color0 #15161e
-color1 #f7768e
-color2 #9ece6a
-color3 #e0af68
-color4 #7aa2f7
-color5 #bb9af7
-color6 #7dcfff
-color7 #a9b1d6
+# # normal
+# color0 #414868
+# color1 #f7768e
+# color2 #9ece6a
+# color3 #e0af68
+# color4 #7aa2f7
+# color5 #bb9af7
+# color6 #7dcfff
+# color7 #a9b1d6
 
-# bright
-color8 #414868
-color9 #f7768e
-color10 #9ece6a
-color11 #e0af68
-color12 #7aa2f7
-color13 #bb9af7
-color14 #7dcfff
-color15 #c0caf5
+# # bright
+# color8 #414868
+# color9 #f7768e
+# color10 #9ece6a
+# color11 #e0af68
+# color12 #7aa2f7
+# color13 #bb9af7
+# color14 #7dcfff
+# color15 #c0caf5
 
-# extended colors
-color16 #ff9e64
-color17 #db4b4b
+# # extended colors
+# color16 #ff9e64
+# color17 #db4b4b
   
-# End Tokyonight Theme  
+# # End Tokyonight Theme  
+
+# =======================
+# =======================
+
+# Gruvbox-material theme
+
+background #282828
+foreground #d4be98
+
+selection_background #d4be98
+selection_foreground #282828
+
+cursor #a89984
+cursor_text_color background
+
+active_tab_background #282828
+active_tab_foreground #d4be98
+active_tab_font_style bold
+inactive_tab_background #282828
+inactive_tab_foreground #a89984
+inactive_tab_font_style normal
+tab_bar_background #1d1d1d
+macos_titlebar_color #1d1d1d
+
+# Black
+color0 #665c54
+color8 #928374
+
+# Red
+color1 #ea6962
+color9 #ea6962
+
+# Green
+color2 #a9b665
+color10 #a9b665
+
+# Yellow
+color3 #e78a4e
+color11 #d8a657
+
+# Blue
+color4 #7daea3
+color12 #7daea3
+
+# Magenta
+color5 #d3869b
+color13 #d3869b
+
+# Cyan
+color6 #89b482
+color14 #89b482
+
+# White
+color7 #d4be98
+color15 #d4be98
+
+# end Gruvbox-material
