--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -6,11 +6,15 @@ set-option -ga terminal-overrides ",xterm-256color:Tc"
 set -s escape-time 0
 
 # the default green bg status bar sucks
-set -g status-style 'bg=#15161e fg=#82aaff'
+# set -g status-style 'bg=#15161e fg=#82aaff'
+set -g status-style 'bg=#1d1d1d fg=#d4be98'
 
 # give more space to session name
 # it won't always take 40 characters, but it will allow up to that many
 set -g status-left-length 40
+
+# more space to right side as well
+set -g status-right-length 60
 
 bind r source-file ~/.tmux.conf
 
