update theme to use tokyonight

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -6,15 +6,17 @@ set-option -ga terminal-overrides ",xterm-256color:Tc"
 set -s escape-time 0
 
 # the default green bg status bar sucks
-# set -g status-style 'bg=#15161e fg=#82aaff'
-set -g status-style 'bg=#1d1d1d fg=#d4be98'
+set -g status-style 'bg=#15161e fg=#82aaff' # tokyonight
+# set -g status-style 'bg=#1d1d1d fg=#d4be98' # gruvbox-material
 
 # give more space to session name
 # it won't always take 40 characters, but it will allow up to that many
 set -g status-left-length 40
 
-# more space to right side as well
-set -g status-right-length 60
+# Undercurl
+set -g default-terminal "${TERM}"
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
 
 bind r source-file ~/.tmux.conf
 
