--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -23,6 +23,9 @@ bind r source-file ~/.tmux.conf
 # windows start at index 1 instead of 0
 set -g base-index 1
 
+# allow mouse to scroll instead of sending up/down arrow key events
+set -g mouse on
+
 # vim keybindings
 set-window-option -g mode-keys vi
 
