add gum, use that for tmux scripts

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -12,6 +12,7 @@ set -g status-style 'bg=#15161e fg=#82aaff' # tokyonight
 # give more space to session name
 # it won't always take 40 characters, but it will allow up to that many
 set -g status-left-length 40
+set -g status-right-length 80
 
 # Undercurl
 set -g default-terminal "${TERM}"
