update tmux conf copy-mode bindings

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -12,7 +12,7 @@ set -g status-style 'bg=#15161e fg=#82aaff' # tokyonight
 # give more space to session name
 # it won't always take 40 characters, but it will allow up to that many
 set -g status-left-length 40
-set -g status-right-length 80
+set -g status-right-length 150
 
 # Undercurl
 set -g default-terminal "${TERM}"
@@ -29,6 +29,13 @@ set -g mouse on
 
 # vim keybindings
 set-window-option -g mode-keys vi
+
+# vim bindings in copy-mode.
+# this lets me use v to select text and y to yank text to clipboard
+bind -T copy-mode-vi v send -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
+bind P paste-buffer
+bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
 
 # the following options are from tmux-sensible:
 # Increase scrollback buffer size from 2000 to 50000 lines
