--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,42 +1,42 @@
 [push]
-	default = simple
+    default = simple
     autoSetupRemote = true
 [core]
-	editor = /opt/homebrew/bin/nvim
-  excludesfile = ~/.gitignore.global
-	pager = diff-so-fancy | less --tabs=2 -RFX
+    editor = /opt/homebrew/bin/nvim
+    excludesfile = ~/.gitignore.global
+    pager = diff-so-fancy | less --tabs=2 -RFX
 [alias]
-	g = git
-	c = commit -am
-	co = checkout
-	bc = checkout -b
-	bx = branch -D
-	ba = branch --all
-	cmsg = commit -m
-	unstage = reset --
-	branch-name = rev-parse --abbrev-ref HEAD
-	publish = push -u origin $(git branch-name)
-	pub = push -u origin $(git branch-name)
-	mm = merge master
-	f = fetch --all --prune
-	l = pull
-	d = diff
-	a = add
-	cm = checkout master
-	lm = "!git checkout master && git pull"
-	s = status
-	lg = log --graph --decorate --pretty=oneline --abbrev-commit --all
-	conflicts = diff --name-only --diff-filter=U
-	# Delete any branches that have been merged into master
-	# See also: https://gist.github.com/robmiller/5133264
-	cleanup = !git co master && git branch --merged | grep -v '\\*' | xargs -n 1 git branch -d
+    g = git
+    c = commit -am
+    co = checkout
+    bc = checkout -b
+    bx = branch -D
+    ba = branch --all
+    cmsg = commit -m
+    unstage = reset --
+    branch-name = rev-parse --abbrev-ref HEAD
+    publish = push -u origin $(git branch-name)
+    pub = push -u origin $(git branch-name)
+    mm = merge master
+    f = fetch --all --prune
+    l = pull
+    d = diff
+    a = add
+    cm = checkout master
+    lm = "!git checkout master && git pull"
+    s = status
+    lg = log --graph --decorate --pretty=oneline --abbrev-commit --all
+    conflicts = diff --name-only --diff-filter=U
+    # Delete any branches that have been merged into master
+    # See also: https://gist.github.com/robmiller/5133264
+    cleanup = !git co master && git branch --merged | grep -v '\\*' | xargs -n 1 git branch -d
 [log]
-	date = iso
+    date = iso
 [filter "lfs"]
-	required = true
-	process = git-lfs filter-process
-	clean = git-lfs clean -- %f
-	smudge = git-lfs smudge -- %f
+    required = true
+    process = git-lfs filter-process
+    clean = git-lfs clean -- %f
+    smudge = git-lfs smudge -- %f
 
 # use separate file for user info
 [includeIf "gitdir:~/work/"]
@@ -48,21 +48,24 @@
 [include]
     path = ~/.gitconfig.local
 [color "diff-highlight"]
-	oldNormal = red
-	oldHighlight = red bold 52
-	newNormal = green
-	newHighlight = green bold 22
+    oldNormal = red
+    oldHighlight = red bold 52
+    newNormal = green
+    newHighlight = green bold 22
 [credential]
-	helper = osxkeychain
+    helper = osxkeychain
 [remote "origin"]
-	prune = true
+    prune = true
 [pull]
-	rebase = false
+    rebase = false
 [init]
-	defaultBranch = main
+    defaultBranch = main
 [credential "https://github.com"]
-	helper = 
-	helper = !/opt/homebrew/bin/gh auth git-credential
+    helper = 
+    helper = !/opt/homebrew/bin/gh auth git-credential
 [credential "https://gist.github.com"]
-	helper = 
-	helper = !/opt/homebrew/bin/gh auth git-credential
+    helper = 
+    helper = !/opt/homebrew/bin/gh auth git-credential
+[rerere]
+    enabled = 1
+    autoupdate = true
