--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -6,6 +6,7 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
+# font_family      BerkeleyMono Nerd Font
 font_family      MonoLisa Nerd Font
 # bold_font        auto
 # italic_font      auto
