--- a/zed/.config/zed/settings.json
+++ b/zed/.config/zed/settings.json
@@ -1,13 +1,17 @@
 {
     "buffer_font_family": "MonoLisa Nerd Font",
     "buffer_font_size": 16,
-    "theme": "one-dark",
+    "theme": "One Dark",
     "format_on_save": "off",
     "soft_wrap": "editor_width",
-    "vim_mode": false,
+    "vim_mode": true,
+    "tab_size": 2,
     "language_overrides": {
         "Markdown": {
             "soft_wrap": "preferred_line_length"
         }
+    },
+    "experiments": {
+      "experimental_themes": true
     }
 }
