start migration to kickstart.nvim

--- a/zed/.config/zed/settings.json
+++ b/zed/.config/zed/settings.json
@@ -4,7 +4,7 @@
     "theme": "One Dark",
     "format_on_save": "off",
     "soft_wrap": "editor_width",
-    "vim_mode": true,
+    "vim_mode": false,
     "tab_size": 2,
     "language_overrides": {
         "Markdown": {
