--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -68,3 +68,7 @@ bind -r l select-pane -R
 # forget the find window.  That is for chumps
 bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
 bind-key -r k run-shell "~/.local/bin/tmux-sessionizer"
+
+# use fish in tmux
+set -g default-command /opt/homebrew/bin/fish
+set -g default-shell /opt/homebrew/bin/fish
