--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -69,6 +69,6 @@ bind -r l select-pane -R
 bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
 bind-key -r k run-shell "~/.local/bin/tmux-sessionizer"
 
-# use fish in tmux
-set -g default-command /opt/homebrew/bin/fish
-set -g default-shell /opt/homebrew/bin/fish
+# use zsh in tmux
+set -g default-command /opt/homebrew/bin/zsh
+set -g default-shell /opt/homebrew/bin/zsh
