add ripgrep config, modify tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -72,3 +72,10 @@ bind-key -r k run-shell "~/.local/bin/tmux-sessionizer"
 # use zsh in tmux
 set -g default-command /opt/homebrew/bin/zsh
 set -g default-shell /opt/homebrew/bin/zsh
+
+# plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'nhdaly/tmux-better-mouse-mode'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
