add tmux plugins, update tz binary

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -73,9 +73,18 @@ bind-key -r k run-shell "~/.local/bin/tmux-sessionizer"
 set -g default-command /opt/homebrew/bin/zsh
 set -g default-shell /opt/homebrew/bin/zsh
 
+# use fish in tmux
+# set -g default-command /opt/homebrew/bin/fish
+# set -g default-shell /opt/homebrew/bin/fish
+
 # plugins
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
+
+# plugin configs
+set -g @continuum-boot-options 'kitty' # tell tmux-continuum to start when computer starts. Tell it to use kitty.
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
