--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -6,8 +6,8 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-# font_family      BerkeleyMono Nerd Font
-font_family      MonoLisa Nerd Font
+font_family      BerkeleyMono Nerd Font
+# font_family      MonoLisa Nerd Font
 # bold_font        auto
 # italic_font      auto
 # bold_italic_font auto
