add time module back to prompt

--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -5,6 +5,7 @@ add_newline = false
 # add/remove $line_break\ before $character\ to get prompt character on same line as prompt
 
 format = """\
+  $time\
   $directory\
   $git_branch\
   $git_status\
@@ -38,7 +39,7 @@ format = "[$path ]($style)[$read_only]($read_only_style)"
 # show the time in the prompt
 [time]
 disabled = false
-style = "bright-black"
+style = "bright-white dimmed"
 time_format = "[%T] "
 format = "[$time]($style)"
 
