some cleanup and tweaks

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,5 +1,6 @@
 # make colors work nice
-set -g default-terminal "xterm-256color"
+set -g default-terminal "tmux-256color"
+
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 # don't add a delay when pressing escape
