--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -85,6 +85,8 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 
 # plugin configs
+set -g @continuum-boot 'on' # have continuum boot up when computer restarts.
+set -g @continuum-restore 'on' # tell continuum to restore previous session.
 set -g @continuum-boot-options 'kitty' # tell tmux-continuum to start when computer starts. Tell it to use kitty.
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
