tweak tmux.conf

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,14 +1,9 @@
 # make colors work nice
 set -g default-terminal "tmux-256color"
-
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 # don't add a delay when pressing escape
 set -s escape-time 0
-
-# the default green bg status bar sucks
-set -g status-style 'bg=#15161e fg=#82aaff' # tokyonight
-# set -g status-style 'bg=#1d1d1d fg=#d4be98' # gruvbox-material
 
 #------------------------------
 # TokyoNight colors for Tmux
@@ -33,7 +28,7 @@ set -g status-left-style NONE
 set -g status-right-style NONE
 
 set -g status-left "#[fg=#1d202f,bg=#7aa2f7,bold] #S #[fg=#7aa2f7,bg=#1f2335,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=#1f2335,bg=#1f2335,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#1f2335] #{prefix_highlight} #[fg=#3b4261,bg=#1f2335,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#3b4261] %Y-%m-%d | %I:%M %p #[fg=#7aa2f7,bg=#3b4261,nobold,nounderscore,noitalics]#[fg=#1d202f,bg=#7aa2f7,bold] #h "
+set -g status-right "#[fg=#1f2335,bg=#1f2335,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#1f2335] #{prefix_highlight} #[fg=#3b4261,bg=#1f2335,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#3b4261] %Y-%m-%d #[fg=#7aa2f7,bg=#3b4261,nobold,nounderscore,noitalics]#[fg=#1d202f,bg=#7aa2f7,bold] %I:%M %p "
 
 setw -g window-status-activity-style "underscore,fg=#a9b1d6,bg=#1f2335"
 setw -g window-status-separator ""
@@ -52,6 +47,7 @@ set -g default-terminal "${TERM}"
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
 set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
 
+# ctrl-b r to reload tmux.conf
 bind r source-file ~/.tmux.conf
 
 # windows start at index 1 instead of 0
