make tmux messages more prominent

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -10,8 +10,8 @@ set -s escape-time 0
 #------------------------------
 set -g mode-style "fg=#7aa2f7,bg=#3b4261"
 
-set -g message-style "fg=#7aa2f7,bg=#3b4261"
-set -g message-command-style "fg=#7aa2f7,bg=#3b4261"
+set -g message-style "fg=#1a1b26,bg=#e0af68"
+set -g message-command-style "fg=#1a1b26,bg=#e0af68"
 
 set -g pane-border-style "fg=#3b4261"
 set -g pane-active-border-style "fg=#7aa2f7"
